--- a/css/theme.css
+++ b/css/theme.css
@@ -698,127 +698,280 @@ body {
 }
 
 .barbershops-page .barbershop-cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
   gap: 1rem;
   margin: 0 auto;
 }
-@media (min-width: 992px) {
+@media (min-width: 576px) and (max-width: 768px) {
   .barbershops-page .barbershop-cards {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
+    grid-template-columns: 1fr;
     justify-items: center;
-    margin: 0 auto;
+    text-align: center;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card {
+    max-width: 500px;
+    padding: 2rem;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .barbershop-image {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    margin-bottom: 1rem;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card h3 {
+    font-size: 1.75rem;
+    margin-top: 0.5rem;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .rating {
+    margin: 1rem 0;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .services {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem 0;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .english-level,
+  .barbershops-page .barbershop-cards .barbershop-card .status,
+  .barbershops-page .barbershop-cards .barbershop-card .distance {
+    margin-top: 1rem;
+    font-size: 1.25rem;
   }
 }
-@media (min-width: 1440px) {
+@media (min-width: 768px) and (max-width: 992px) {
+  .barbershops-page .barbershop-cards {
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card {
+    max-width: 500px;
+    padding: 2rem;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .barbershop-image {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    margin-bottom: 1rem;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card h3 {
+    font-size: 1.75rem;
+    margin-top: 0.5rem;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .rating {
+    margin: 1rem 0;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .services {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem 0;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .english-level,
+  .barbershops-page .barbershop-cards .barbershop-card .status,
+  .barbershops-page .barbershop-cards .barbershop-card .distance {
+    margin-top: 1rem;
+    font-size: 1.25rem;
+  }
+}
+@media (min-width: 992px) {
   .barbershops-page .barbershop-cards {
     grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+  }
+}
+@media (max-width: 576px) {
+  .barbershops-page .barbershop-cards {
+    grid-template-columns: 1fr;
+    justify-items: center;
+    text-align: center;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card {
+    max-width: 100%;
+    padding: 1rem;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .barbershop-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card h3 {
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .rating {
+    margin: 1rem 0;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .services {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem 0;
+  }
+  .barbershops-page .barbershop-cards .barbershop-card .english-level,
+  .barbershops-page .barbershop-cards .barbershop-card .status,
+  .barbershops-page .barbershop-cards .barbershop-card .distance {
+    margin-top: 1rem;
+    font-size: 1rem;
   }
 }
 
 .barbershops-page .barbershop-card {
   background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 10px;
-  padding: 20px;
-  width: 300px;
-  text-align: center;
-  cursor: pointer;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.barbershops-page .barbershop-card .rating {
-  color: gold;
-  margin-top: 0.5rem;
-}
-.barbershops-page .barbershop-card .distance {
-  margin-top: 0.5rem;
-}
-.barbershops-page .barbershop-card .services {
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-}
-.barbershops-page .barbershop-card .service {
-  padding: 0.2rem 0.6rem;
-  border-radius: 0.5rem;
-  color: white;
-  font-weight: bold;
-  background-color: #eee; /* Default color */
-}
-.barbershops-page .barbershop-card .service-haircuts {
-  background-color: #FF7F7F; /* Example color */
-}
-.barbershops-page .barbershop-card .service-trims {
-  background-color: #7FFF7F; /* Example color */
-}
-.barbershops-page .barbershop-card .service-shaves {
-  background-color: #7F7FFF; /* Example color */
-}
-.barbershops-page .barbershop-card p {
-  font-size: 1.4rem;
-}
-.barbershops-page .barbershop-card .english-level {
-  font-weight: bold;
-}
-.barbershops-page .barbershop-card .english-level.english-excellent {
-  color: #1EBBFF;
-  font-weight: bold;
-}
-.barbershops-page .barbershop-card .english-level.english-good {
-  color: #1ECE25;
-  font-weight: bold;
-}
-.barbershops-page .barbershop-card .english-level.english-fair {
-  color: #D7611F;
-  font-weight: bold;
-}
-.barbershops-page .barbershop-card .english-level.english-poor {
-  color: #FF2B1E;
-  font-weight: bold;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  max-width: 600px;
+  margin: 1rem 0;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .barbershops-page .barbershop-card:hover {
   transform: translateY(-10px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-
-.barbershop-card-link {
-  text-decoration: none;
-  color: inherit; /* Ensure the text color inherits the style from the card */
+.barbershops-page .barbershop-card img.barbershop-image {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
-
-.barbershop-card {
-  position: relative;
-  z-index: 1;
+@media (max-width: 768px) {
+  .barbershops-page .barbershop-card img.barbershop-image {
+    width: 150px;
+    height: auto;
+    margin-right: 1rem;
+  }
 }
-
-.hidden {
-  display: none;
+@media (max-width: 576px) {
+  .barbershops-page .barbershop-card img.barbershop-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
 }
-
-.status-open {
-  color: green;
+.barbershops-page .barbershop-card .card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
 }
-
-.status-closed {
-  color: red;
+.barbershops-page .barbershop-card .card-content h3 {
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+  text-align: center;
+  width: 100%;
 }
-
-.status-opening-soon {
-  color: orange;
+.barbershops-page .barbershop-card .card-content .rating {
+  color: gold;
+  margin: 0.5rem 0;
+  text-align: center;
+  width: 100%;
 }
-
-.status-closing-soon {
-  color: orange;
+.barbershops-page .barbershop-card .card-content .services {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 0.5rem 0;
+  font-size: 1rem;
 }
-
-.closing-time,
-.opening-time {
-  color: black; /* Ensure this color matches your desired styling */
+.barbershops-page .barbershop-card .card-content .level {
+  font-size: 1rem;
+  margin: 0.5rem 0;
+}
+.barbershops-page .barbershop-card .card-content .status {
+  font-weight: bold;
+  font-size: 1rem;
+  margin: 0.5rem 0;
+}
+@media (max-width: 768px) {
+  .barbershops-page .barbershop-card .card-content .status {
+    font-size: 0.9rem;
+  }
+}
+.barbershops-page .barbershop-card .card-content .distance {
+  margin-top: 0.5rem;
+  font-size: 1rem;
+}
+@media (max-width: 768px) {
+  .barbershops-page .barbershop-card .card-content .distance {
+    font-size: 0.9rem;
+  }
+}
+@media (max-width: 992px) {
+  .barbershops-page .barbershop-card {
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 1rem;
+  }
+  .barbershops-page .barbershop-card img.barbershop-image {
+    width: 150px;
+    height: auto;
+    margin-right: 1rem;
+  }
+  .barbershops-page .barbershop-card .card-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: left;
+    flex: 1;
+  }
+  .barbershops-page .barbershop-card .card-content h3, .barbershops-page .barbershop-card .card-content .rating, .barbershops-page .barbershop-card .card-content .services, .barbershops-page .barbershop-card .card-content .status, .barbershops-page .barbershop-card .card-content .distance {
+    width: 100%;
+  }
+}
+@media (max-width: 576px) {
+  .barbershops-page .barbershop-card {
+    flex-direction: row;
+    align-items: center;
+    padding: 0.5rem;
+  }
+  .barbershops-page .barbershop-card img.barbershop-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
+  .barbershops-page .barbershop-card .card-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+    width: 100%;
+  }
+  .barbershops-page .barbershop-card .card-content h3 {
+    font-size: 1rem;
+    grid-column: 1/span 2;
+  }
+  .barbershops-page .barbershop-card .card-content .rating {
+    font-size: 1.2rem;
+    color: gold;
+    grid-column: 2/3;
+    justify-self: end;
+  }
+  .barbershops-page .barbershop-card .card-content .status {
+    grid-column: 1/span 2;
+    font-size: 0.75rem;
+  }
+  .barbershops-page .barbershop-card .card-content .distance {
+    grid-column: 2/3;
+    font-size: 0.75rem;
+    justify-self: end;
+  }
+  .barbershops-page .barbershop-card .card-content .level,
+  .barbershops-page .barbershop-card .card-content .services {
+    display: none;
+  }
 }
 
 /* Single Barbershop Page Styling */
@@ -887,6 +1040,11 @@ body {
   padding: 20px;
   max-width: 800px;
   margin: 20px auto;
+  transition: none;
+}
+.barbershop-single .barbershop-card:hover {
+  transform: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 /* Header Section */
@@ -946,7 +1104,7 @@ body {
 }
 
 .barbershop-info-right .status {
-  color: red;
+  color: green;
   font-weight: bold;
   margin-top: 10px;
 }
@@ -995,14 +1153,121 @@ body {
   margin-top: 1rem;
 }
 
+/* Images Section */
+.barbershop-images {
+  margin-top: 20px;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 equal columns */
+  grid-template-rows: repeat(2, 1fr); /* 2 equal rows */
+  gap: 10px;
+  height: 500px; /* Adjust as needed for the overall height */
+}
+
+.gallery .image-item:nth-child(1) {
+  grid-column: 1/2; /* First column */
+  grid-row: 1/2; /* First row */
+}
+
+.gallery .image-item:nth-child(2) {
+  grid-column: 1/2; /* First column */
+  grid-row: 2/3; /* Second row */
+}
+
+.gallery .image-item:nth-child(3) {
+  grid-column: 2/5; /* Spans across 3 columns */
+  grid-row: 1/3; /* Spans across 2 rows */
+}
+
+.gallery img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover; /* Ensures the image covers the area without distortion */
+  border-radius: 10px;
+}
+
+/* Reviews Section */
+.barbershop-google-reviews-map {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Two equal columns */
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.google-review,
+.google-map {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.google-review {
+  grid-column: 1/2;
+}
+
+.single-review {
+  border-bottom: 1px solid #e0e0e0;
+  padding: 10px 0;
+}
+
+.single-review img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.single-review strong a {
+  text-decoration: none;
+  color: #333;
+}
+
+.single-review .review-date {
+  color: #999;
+  font-size: 12px;
+}
+
+.single-review .stars {
+  color: #f1c40f;
+}
+
+.single-review p {
+  margin-top: 5px;
+  color: #333;
+}
+
+/* Map Section */
+.google-map {
+  grid-column: 2/3;
+}
+
+.map-container {
+  width: 100%;
+  height: 200px; /* Adjust height as needed */
+  overflow: hidden;
+}
+
+.map-container iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 10px;
+}
+
 /* Services Section */
 .barbershop-services {
   margin-bottom: 2rem;
+  flex: 1;
+  margin-right: 20px;
 }
 
 .barbershop-services h2 {
   font-size: 1.8rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 2rem;
 }
 
 .barbershop-services .services-list {
@@ -1012,77 +1277,33 @@ body {
 }
 
 .barbershop-services .services-list li {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem; /* Added more space between items */
+  display: flex;
+  align-items: center;
 }
 
-/* English Level Section */
-.barbershop-english-level {
-  margin-bottom: 2rem;
+.barbershop-services .service-icon {
+  width: 30px; /* Smaller icon size */
+  height: auto;
+  margin-right: 10px; /* Spacing between icon and text */
 }
 
-.barbershop-english-level p {
-  font-size: 1.4rem;
+.barbershop-services .service-name {
+  flex: 1;
+  text-align: left;
 }
 
-.barbershop-english-level .english-excellent {
-  color: #1EBBFF;
-  font-weight: bold;
-}
-
-.barbershop-english-level .english-good {
-  color: #1ECE25;
-  font-weight: bold;
-}
-
-.barbershop-english-level .english-fair {
-  color: #D7611F;
-  font-weight: bold;
-}
-
-.barbershop-english-level .english-poor {
-  color: #FF2B1E;
-  font-weight: bold;
-}
-
-/* Map Section */
-.barbershop-map {
-  margin-bottom: 2rem;
-}
-
-.barbershop-map h2 {
-  font-size: 1.8rem;
-  margin-bottom: 0.5rem;
-}
-
-.map-container {
-  width: 100%;
-  height: 300px;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-/* Review Section */
-.barbershop-review {
-  margin-bottom: 2rem;
-}
-
-.barbershop-review h2 {
-  font-size: 1.8rem;
-  margin-bottom: 0.5rem;
-}
-
-.barbershop-review .review-content {
-  font-size: 1.2rem;
-  background-color: #f9f9f9;
-  padding: 15px;
-  border-radius: 10px;
-  border: 1px solid #e0e0e0;
+.barbershop-services .service-price {
+  flex-shrink: 0;
+  text-align: right;
+  margin-left: 10px;
 }
 
 /* Login Section */
 .barbershop-login {
-  text-align: center;
-  margin-top: 2rem;
+  text-align: right;
+  flex: 1;
+  margin-bottom: 2rem;
 }
 
 .barbershop-login p {
@@ -1099,6 +1320,7 @@ body {
   border-radius: 5px;
   text-decoration: none;
   transition: background-color 0.3s ease;
+  margin-left: 10px;
 }
 
 .barbershop-login .btn-primary {
@@ -1111,6 +1333,78 @@ body {
 
 .barbershop-login .btn:hover {
   background-color: #000;
+}
+
+/* English Level Section */
+.barbershop-english-level p {
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center; /* Aligns the flag and text */
+}
+
+.flag-icon {
+  width: 30px; /* Adjust flag size */
+  height: auto;
+  margin-right: 10px; /* Spacing between flag and text */
+}
+
+/* Flexbox Container for Services and Login */
+.barbershop-info-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 40px 35px 0px 35px;
+}
+
+/* Responsive Layout for @media (min-width: $md) and (max-width: $lg) */
+@media (min-width: 768px) and (max-width: 992px) {
+  .barbershop-header {
+    grid-column: 1/span 1; /* First column */
+    grid-row: 1/span 3; /* Span the entire height of the content */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; /* Align items to the top */
+    height: 100%; /* Make sure it takes full height */
+  }
+  .barbershop-info-right {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: flex-start; /* Aligns items to the top */
+    max-width: 100%; /* Ensure it doesn't exceed container width */
+  }
+  .barbershop-info-right .opening-hours {
+    margin-top: 0; /* Remove any top margin */
+    margin-bottom: 0; /* Remove any bottom margin */
+    flex-grow: 0; /* Prevent it from growing in flex layout */
+  }
+  .barbershop-info-right .opening-hours li {
+    font-size: 0.75rem; /* Adjust this value to spread the items out more */
+  }
+  .barbershop-images {
+    grid-column: 2/span 3; /* Spans across columns 2, 3, 4 */
+    grid-row: 1/span 1; /* Occupy the first row */
+  }
+  .google-review {
+    grid-column: 2/span 1; /* Second column */
+    grid-row: 2/span 1; /* Occupy the second row */
+  }
+  .google-map {
+    grid-column: 3/span 2; /* Columns 3 and 4 */
+    grid-row: 2/span 1; /* Occupy the second row */
+  }
+  .barbershop-services {
+    grid-column: 2/span 2; /* Columns 2 and 3 */
+    grid-row: 3/span 1; /* Occupy the third row */
+  }
+  .barbershop-login {
+    grid-column: 4/span 1; /* Fourth column */
+    grid-row: 3/span 1; /* Occupy the third row */
+  }
+  .barbershop-english-level {
+    grid-column: 1/span 4; /* Spans across all 4 columns */
+    grid-row: 4/span 1; /* Occupy the fourth row */
+  }
 }
 
 /*# sourceMappingURL=theme.css.map */
